spec/fixtures/modules/error/plans/call_run_fail.pp
plan error::call_run_fail (
  TargetSpec $targets
) {
 run_plan('error::run_fail', 'target' => $target)
}
